# admapix

./: README.md  README_CN.md  install.ps1  install.sh  pyproject.toml  requirements.txt  server.py
claude-plugin/.claude-plugin/: marketplace.json
claude-plugin/admapix/.claude-plugin/: plugin.json
claude-plugin/admapix/skills/admapix/: SKILL.md
docs/archive/deep-research-agent/: deep-research-agent-design.md
docs/archive/deep-research-agent/agent/: __init__.py  __main__.py  deep_research.py  prompts.py  state.py  tools.py
docs/superpowers/plans/: 2026-03-17-skill-streaming-plugin.md
docs/superpowers/specs/: 2026-03-17-skill-streaming-plugin-design.md
scripts/: run_admapix_server.py
skill/: README.md  SKILL.md
skill/references/: api-creative.md  api-market.md  api-product.md  api-ranking.md
src/admapix_mcp/: __init__.py  __main__.py  api.py  server.py
