[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "admapix-mcp"
version = "1.0.0"
description = "AdMapix MCP Server — AI-powered ad creative search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Miaozhisheng", email = "dev@miaozhisheng.tech" },
]
keywords = ["mcp", "advertising", "creative", "search", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.scripts]
admapix-mcp = "admapix_mcp.__main__:main"

[project.urls]
Homepage = "https://admapix.miaozhisheng.tech"
Repository = "https://github.com/fly0pants/admapix"
